Bug 815058: Move callers of mozilla-internal-API-only "SetDOMStringToNull()" from nsINode.h to .cpp, to fix "inline function used but never defined" build warnings. r=Ms2ger